# nde-valence-signal-vs-effect

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
outputs/latest/fixed_n_complete_case/reports/: 00_run_summary.md  01_valence_multivariate_report.md  02_post_effects_lci_report.md  03_adjusted_models_comparison_report.md  (+2 more)
outputs/latest/reports/: 02_post_effects_mcq_report.md  04_adjusted_models_comparison_report.md  05_covariate_diagnostics_report.md  bayesian_rank_sum_variable_N.md
outputs/no_empty_no_missing_test/reports/: 01_valence_multivariate_report.md  02_post_effects_mcq_report.md  03_post_effects_lci_report.md  04_adjusted_models_comparison_report.md  05_covariate_diagnostics_report.md  bayesian_rank_sum_fixed_N.md
scripts/: make_final_valence_summary_figure.py  run_all.py  run_bayesian_analysis.py
src/nde_analysis/: cli.py  config.py  io.py
src/nde_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/nde_analysis/analysis/: adjusted_effects.py  bayesian_rank_sum.py  bayesian_reporting.py  collinearity.py  diagnostics.py  multiple_testing.py  post_effects_lci.py  post_effects_mcq.py  statistics.py  valence_models.py
src/nde_analysis/plotting/: adjusted_plots.py  collinearity_plots.py  diagnostics_plots.py  lci_plots.py  mcq_plots.py  style.py  valence_plots.py
src/nde_analysis/preprocess/: mappings.py  transform.py
src/nde_analysis/reporting/: render.py
src/nde_analysis/utils/: validation.py
tests/: test_bayesian_rank_sum.py  test_cli.py  test_models.py  test_preprocess.py
(+10 files in other folders)
